fixed alignment, format

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,13 @@
-body {
+* {
+    margin: 0;
+    padding: 0;
+}
+  
+  body {
     /* more on this crazy alphanumerical value in a minute! */
     color: #39a6b2;
     font-family: Helvetica, Arial, sans-serif;
-  }
+}
 
   /* apply styles to <header> */
 header {
@@ -15,6 +20,7 @@ header {
     font-size: 36px;
     color: #fce138;
     margin: 0;
+    display: inline;
   }
   
   header a {
@@ -34,7 +40,7 @@ header {
   header nav ul li {
     display: inline;
   }
-  
+
   header nav ul li a {
     margin: 0 30px;
     font-weight: lighter;
